--- a/app/src/main/res/layout/update_task_dialog.xml
+++ b/app/src/main/res/layout/update_task_dialog.xml
@@ -10,7 +10,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/green1">
 
         <TextView
             android:id="@+id/titleTaskTxt"
@@ -18,14 +19,15 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:text="Update Task"
-            android:textStyle="bold"
-            android:textSize="24sp"/>
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
         <ImageView
             android:id="@+id/cancelImg"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_margin="8dp"
             android:layout_alignParentEnd="true"
+            android:layout_margin="8dp"
             android:src="@drawable/close_ic" />
 
         <View
@@ -33,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:layout_below="@id/titleTaskTxt"
-            android:background="@color/black"/>
+            android:background="@color/black" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -45,8 +47,8 @@
             android:orientation="vertical">
 
             <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.App.TextIntputLayout"
                 android:id="@+id/edTaskTitleL"
+                style="@style/Widget.App.TextIntputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Enter The Title">
@@ -55,14 +57,14 @@
                     android:id="@+id/edTaskTitle"
                     android:layout_width="match_parent"
                     android:layout_height="?actionBarSize"
-                    android:background="#EAE4E8"
-                    android:inputType="text"/>
+                    android:background="@color/green2"
+                    android:inputType="text" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.App.TextIntputLayout"
                 android:id="@+id/edTaskDescL"
+                style="@style/Widget.App.TextIntputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Enter The Description">
@@ -71,7 +73,7 @@
                     android:id="@+id/edTaskDesc"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#EAE4E8"
+                    android:background="@color/green2"
                     android:gravity="top|start"
                     android:inputType="textMultiLine"
                     android:lines="5"
@@ -81,15 +83,14 @@
 
             <Button
                 android:id="@+id/updateTaskBtn"
+                style="@style/Widget.App.Button.Fill"
                 android:layout_width="wrap_content"
                 android:layout_height="?actionBarSize"
                 android:layout_gravity="center"
                 android:layout_marginTop="4dp"
                 android:backgroundTint="@color/black"
-                style="@style/Widget.App.Button.Fill"
                 android:text="Update Task"
-                android:textSize="20sp"
-                />
+                android:textSize="20sp" />
 
         </LinearLayout>
     </RelativeLayout>
